Add list, media and box

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import './fonts.scss';
 @import './general.scss';
 
+// bulma
 @import '../node_modules/bulma/bulma.sass';
 
 @import './overwrites.scss';
