--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -42,6 +42,7 @@ $title-color: $primary;
 // $input-shadow: none;
 
 // Sizes
+$body-size: 17px;
 $size-1: 2.2rem;
 $size-2: 1.875rem;
 $size-3: 1.56rem;
@@ -49,5 +50,3 @@ $size-4: 1.56rem;
 $size-5: 1.06rem;
 $size-6: 1.06rem;
 $size-7: 0.75rem;
-
-$title-weight: ;
