Variable structure set

--- a/scss/_specifics.scss
+++ b/scss/_specifics.scss
@@ -1,7 +1,7 @@
 /* based on https://cdn.skauting.cz/css/style.css */
 
 h1 {
-  font-family: 'skautbold', sans-serif !important;
+  font-family: $family-secondary;
   font-weight: normal !important;
 }
 
