Add form example

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -209,4 +209,8 @@ $pre-code-font-size: 1em;
 
 $footer-background-color: $light;
 
-$footer-padding: 3rem 1.5rem 6rem;
+//
+// Forms
+//
+
+$label-color: $dark;
