--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.backgrount-hero4 {
+.background-hero4 {
   background-image: url('/img/examples/hero4.jpg');
   background-size: cover;
   background-position: center;
