--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,13 +1,12 @@
 @charset "utf-8";
 
-@import '../node_modules/bulma/sass/utilities/functions.sass';
+@import '~bulma/sass/utilities/functions';
 @import 'variables';
-@import 'fonts';
-@import 'general';
 
 // bulma
-@import '../node_modules/bulma/bulma.sass';
+@import '~bulma/bulma';
 
+@import 'fonts';
 @import 'specifics';
 
 @import 'extensions';
