--- a/scss/_extensions.scss
+++ b/scss/_extensions.scss
@@ -8,7 +8,7 @@
     width: 4px;
     height: 4px;
     border-radius: 50%;
-    background-color: #c1cad0;
+    background-color: $blue-grey;
   }
 }
 
