--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,10 @@
 @charset "utf-8";
 
-@import '~bulma/sass/utilities/functions';
+@import '../node_modules/bulma/sass/utilities/functions';
 @import 'variables';
 
 // bulma
-@import '~bulma/bulma';
+@import '../node_modules/bulma/bulma';
 
 @import 'fonts';
 @import 'specifics';
