--- a/scss/_specifics.scss
+++ b/scss/_specifics.scss
@@ -29,6 +29,10 @@ a:hover {
   text-decoration: none;
 }
 
+.tabs a {
+  text-decoration: none;
+}
+
 /* specific navbar logo height */
 
 .navbar-brand img {
