--- a/scss/_specifics.scss
+++ b/scss/_specifics.scss
@@ -33,6 +33,10 @@ a:hover {
   text-decoration: none;
 }
 
+a.button {
+  text-decoration: none;
+}
+
 /* specific navbar logo height */
 
 .navbar-brand img {
