--- a/scss/_specifics.scss
+++ b/scss/_specifics.scss
@@ -37,6 +37,10 @@ a.button {
   text-decoration: none;
 }
 
+a .title {
+  text-decoration: none;
+}
+
 /* specific navbar logo height */
 
 .navbar-brand img {
