--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,9 @@
 // bulma
 @import '../node_modules/bulma/bulma';
 
+// bulma-extensions
+@import '../node_modules/bulma-extensions/bulma-timeline/src/sass/index.sass';
+
 @import 'fonts';
 @import 'specifics';
 
