--- a/css/skaut-design.css
+++ b/css/skaut-design.css
@@ -6956,6 +6956,393 @@ label.panel-block {
   background-color: #eff3f6;
   padding: 3rem 1.5rem 6rem; }
 
+.timeline {
+  display: flex;
+  flex-direction: column; }
+  .timeline .timeline-header {
+    width: 4em;
+    min-width: 4em;
+    max-width: 8em;
+    word-wrap: normal;
+    text-align: center;
+    display: flex;
+    justify-content: center; }
+  .timeline .timeline-item {
+    display: flex;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    position: relative;
+    margin-left: 2em;
+    padding-bottom: 2em; }
+    .timeline .timeline-item::before {
+      content: "";
+      background-color: #dbdbdb;
+      display: block;
+      width: 1px;
+      height: 100%;
+      position: absolute;
+      left: -0.5px;
+      top: 0; }
+    .timeline .timeline-item .timeline-marker {
+      position: absolute;
+      background: #dbdbdb;
+      border: 1px solid #dbdbdb;
+      border-radius: 100%;
+      content: "";
+      display: block;
+      height: 12px;
+      transform: translateX(-50%);
+      top: 1.2rem;
+      width: 12px; }
+      .timeline .timeline-item .timeline-marker.is-image {
+        background: #dbdbdb;
+        border: 1px solid #dbdbdb;
+        border-radius: 100%;
+        display: block;
+        overflow: hidden; }
+        .timeline .timeline-item .timeline-marker.is-image.is-16x16 {
+          height: 16px;
+          width: 16px; }
+        .timeline .timeline-item .timeline-marker.is-image.is-24x24 {
+          height: 24px;
+          width: 24px; }
+        .timeline .timeline-item .timeline-marker.is-image.is-32x32 {
+          height: 32px;
+          width: 32px; }
+        .timeline .timeline-item .timeline-marker.is-image.is-48x48 {
+          height: 48px;
+          width: 48px; }
+        .timeline .timeline-item .timeline-marker.is-image.is-64x64 {
+          height: 64px;
+          width: 64px; }
+        .timeline .timeline-item .timeline-marker.is-image.is-96x96 {
+          height: 96px;
+          width: 96px; }
+        .timeline .timeline-item .timeline-marker.is-image.is-128x128 {
+          height: 128px;
+          width: 128px; }
+      .timeline .timeline-item .timeline-marker.is-icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 24px;
+        width: 24px;
+        background: #dbdbdb;
+        border: 1px solid #dbdbdb;
+        border-radius: 100%;
+        padding: .5rem; }
+        .timeline .timeline-item .timeline-marker.is-icon > * {
+          font-size: 0.75rem !important; }
+      .timeline .timeline-item .timeline-marker.is-outlined .image {
+        background: white; }
+      .timeline .timeline-item .timeline-marker.is-outlined.is-icon {
+        background: white; }
+        .timeline .timeline-item .timeline-marker.is-outlined.is-icon > * {
+          color: #dbdbdb; }
+      .timeline .timeline-item .timeline-marker.is-white {
+        background-color: white !important;
+        border-color: white !important; }
+        .timeline .timeline-item .timeline-marker.is-white .image {
+          border-color: white !important; }
+        .timeline .timeline-item .timeline-marker.is-white.is-icon {
+          background-color: white !important;
+          border-color: white !important; }
+          .timeline .timeline-item .timeline-marker.is-white.is-icon > * {
+            color: #0a0a0a !important; }
+        .timeline .timeline-item .timeline-marker.is-white.is-outlined {
+          background-color: white !important;
+          border-color: white !important; }
+          .timeline .timeline-item .timeline-marker.is-white.is-outlined .image {
+            background-color: white !important; }
+          .timeline .timeline-item .timeline-marker.is-white.is-outlined.is-icon {
+            background-color: white !important; }
+            .timeline .timeline-item .timeline-marker.is-white.is-outlined.is-icon > * {
+              color: white !important; }
+      .timeline .timeline-item .timeline-marker.is-black {
+        background-color: #0a0a0a !important;
+        border-color: #0a0a0a !important; }
+        .timeline .timeline-item .timeline-marker.is-black .image {
+          border-color: #0a0a0a !important; }
+        .timeline .timeline-item .timeline-marker.is-black.is-icon {
+          background-color: #0a0a0a !important;
+          border-color: #0a0a0a !important; }
+          .timeline .timeline-item .timeline-marker.is-black.is-icon > * {
+            color: white !important; }
+        .timeline .timeline-item .timeline-marker.is-black.is-outlined {
+          background-color: white !important;
+          border-color: #0a0a0a !important; }
+          .timeline .timeline-item .timeline-marker.is-black.is-outlined .image {
+            background-color: white !important; }
+          .timeline .timeline-item .timeline-marker.is-black.is-outlined.is-icon {
+            background-color: white !important; }
+            .timeline .timeline-item .timeline-marker.is-black.is-outlined.is-icon > * {
+              color: #0a0a0a !important; }
+      .timeline .timeline-item .timeline-marker.is-light {
+        background-color: #eff3f6 !important;
+        border-color: #eff3f6 !important; }
+        .timeline .timeline-item .timeline-marker.is-light .image {
+          border-color: #eff3f6 !important; }
+        .timeline .timeline-item .timeline-marker.is-light.is-icon {
+          background-color: #eff3f6 !important;
+          border-color: #eff3f6 !important; }
+          .timeline .timeline-item .timeline-marker.is-light.is-icon > * {
+            color: #2f3a4b !important; }
+        .timeline .timeline-item .timeline-marker.is-light.is-outlined {
+          background-color: white !important;
+          border-color: #eff3f6 !important; }
+          .timeline .timeline-item .timeline-marker.is-light.is-outlined .image {
+            background-color: white !important; }
+          .timeline .timeline-item .timeline-marker.is-light.is-outlined.is-icon {
+            background-color: white !important; }
+            .timeline .timeline-item .timeline-marker.is-light.is-outlined.is-icon > * {
+              color: #eff3f6 !important; }
+      .timeline .timeline-item .timeline-marker.is-dark {
+        background-color: #2f3a4b !important;
+        border-color: #2f3a4b !important; }
+        .timeline .timeline-item .timeline-marker.is-dark .image {
+          border-color: #2f3a4b !important; }
+        .timeline .timeline-item .timeline-marker.is-dark.is-icon {
+          background-color: #2f3a4b !important;
+          border-color: #2f3a4b !important; }
+          .timeline .timeline-item .timeline-marker.is-dark.is-icon > * {
+            color: #fafafa !important; }
+        .timeline .timeline-item .timeline-marker.is-dark.is-outlined {
+          background-color: white !important;
+          border-color: #2f3a4b !important; }
+          .timeline .timeline-item .timeline-marker.is-dark.is-outlined .image {
+            background-color: white !important; }
+          .timeline .timeline-item .timeline-marker.is-dark.is-outlined.is-icon {
+            background-color: white !important; }
+            .timeline .timeline-item .timeline-marker.is-dark.is-outlined.is-icon > * {
+              color: #2f3a4b !important; }
+      .timeline .timeline-item .timeline-marker.is-primary {
+        background-color: #2f3a4b !important;
+        border-color: #2f3a4b !important; }
+        .timeline .timeline-item .timeline-marker.is-primary .image {
+          border-color: #2f3a4b !important; }
+        .timeline .timeline-item .timeline-marker.is-primary.is-icon {
+          background-color: #2f3a4b !important;
+          border-color: #2f3a4b !important; }
+          .timeline .timeline-item .timeline-marker.is-primary.is-icon > * {
+            color: #fff !important; }
+        .timeline .timeline-item .timeline-marker.is-primary.is-outlined {
+          background-color: white !important;
+          border-color: #2f3a4b !important; }
+          .timeline .timeline-item .timeline-marker.is-primary.is-outlined .image {
+            background-color: white !important; }
+          .timeline .timeline-item .timeline-marker.is-primary.is-outlined.is-icon {
+            background-color: white !important; }
+            .timeline .timeline-item .timeline-marker.is-primary.is-outlined.is-icon > * {
+              color: #2f3a4b !important; }
+      .timeline .timeline-item .timeline-marker.is-link {
+        background-color: #20659d !important;
+        border-color: #20659d !important; }
+        .timeline .timeline-item .timeline-marker.is-link .image {
+          border-color: #20659d !important; }
+        .timeline .timeline-item .timeline-marker.is-link.is-icon {
+          background-color: #20659d !important;
+          border-color: #20659d !important; }
+          .timeline .timeline-item .timeline-marker.is-link.is-icon > * {
+            color: #fff !important; }
+        .timeline .timeline-item .timeline-marker.is-link.is-outlined {
+          background-color: white !important;
+          border-color: #20659d !important; }
+          .timeline .timeline-item .timeline-marker.is-link.is-outlined .image {
+            background-color: white !important; }
+          .timeline .timeline-item .timeline-marker.is-link.is-outlined.is-icon {
+            background-color: white !important; }
+            .timeline .timeline-item .timeline-marker.is-link.is-outlined.is-icon > * {
+              color: #20659d !important; }
+      .timeline .timeline-item .timeline-marker.is-info {
+        background-color: #6d97ca !important;
+        border-color: #6d97ca !important; }
+        .timeline .timeline-item .timeline-marker.is-info .image {
+          border-color: #6d97ca !important; }
+        .timeline .timeline-item .timeline-marker.is-info.is-icon {
+          background-color: #6d97ca !important;
+          border-color: #6d97ca !important; }
+          .timeline .timeline-item .timeline-marker.is-info.is-icon > * {
+            color: #fff !important; }
+        .timeline .timeline-item .timeline-marker.is-info.is-outlined {
+          background-color: white !important;
+          border-color: #6d97ca !important; }
+          .timeline .timeline-item .timeline-marker.is-info.is-outlined .image {
+            background-color: white !important; }
+          .timeline .timeline-item .timeline-marker.is-info.is-outlined.is-icon {
+            background-color: white !important; }
+            .timeline .timeline-item .timeline-marker.is-info.is-outlined.is-icon > * {
+              color: #6d97ca !important; }
+      .timeline .timeline-item .timeline-marker.is-success {
+        background-color: #008a37 !important;
+        border-color: #008a37 !important; }
+        .timeline .timeline-item .timeline-marker.is-success .image {
+          border-color: #008a37 !important; }
+        .timeline .timeline-item .timeline-marker.is-success.is-icon {
+          background-color: #008a37 !important;
+          border-color: #008a37 !important; }
+          .timeline .timeline-item .timeline-marker.is-success.is-icon > * {
+            color: #fff !important; }
+        .timeline .timeline-item .timeline-marker.is-success.is-outlined {
+          background-color: white !important;
+          border-color: #008a37 !important; }
+          .timeline .timeline-item .timeline-marker.is-success.is-outlined .image {
+            background-color: white !important; }
+          .timeline .timeline-item .timeline-marker.is-success.is-outlined.is-icon {
+            background-color: white !important; }
+            .timeline .timeline-item .timeline-marker.is-success.is-outlined.is-icon > * {
+              color: #008a37 !important; }
+      .timeline .timeline-item .timeline-marker.is-warning {
+        background-color: #eca136 !important;
+        border-color: #eca136 !important; }
+        .timeline .timeline-item .timeline-marker.is-warning .image {
+          border-color: #eca136 !important; }
+        .timeline .timeline-item .timeline-marker.is-warning.is-icon {
+          background-color: #eca136 !important;
+          border-color: #eca136 !important; }
+          .timeline .timeline-item .timeline-marker.is-warning.is-icon > * {
+            color: #fff !important; }
+        .timeline .timeline-item .timeline-marker.is-warning.is-outlined {
+          background-color: white !important;
+          border-color: #eca136 !important; }
+          .timeline .timeline-item .timeline-marker.is-warning.is-outlined .image {
+            background-color: white !important; }
+          .timeline .timeline-item .timeline-marker.is-warning.is-outlined.is-icon {
+            background-color: white !important; }
+            .timeline .timeline-item .timeline-marker.is-warning.is-outlined.is-icon > * {
+              color: #eca136 !important; }
+      .timeline .timeline-item .timeline-marker.is-danger {
+        background-color: #ea6148 !important;
+        border-color: #ea6148 !important; }
+        .timeline .timeline-item .timeline-marker.is-danger .image {
+          border-color: #ea6148 !important; }
+        .timeline .timeline-item .timeline-marker.is-danger.is-icon {
+          background-color: #ea6148 !important;
+          border-color: #ea6148 !important; }
+          .timeline .timeline-item .timeline-marker.is-danger.is-icon > * {
+            color: #fff !important; }
+        .timeline .timeline-item .timeline-marker.is-danger.is-outlined {
+          background-color: white !important;
+          border-color: #ea6148 !important; }
+          .timeline .timeline-item .timeline-marker.is-danger.is-outlined .image {
+            background-color: white !important; }
+          .timeline .timeline-item .timeline-marker.is-danger.is-outlined.is-icon {
+            background-color: white !important; }
+            .timeline .timeline-item .timeline-marker.is-danger.is-outlined.is-icon > * {
+              color: #ea6148 !important; }
+    .timeline .timeline-item .timeline-content {
+      padding: 1em 0 0 2em; }
+      .timeline .timeline-item .timeline-content .heading {
+        font-weight: 600; }
+    .timeline .timeline-item.is-white::before {
+      background-color: white; }
+    .timeline .timeline-item.is-black::before {
+      background-color: #0a0a0a; }
+    .timeline .timeline-item.is-light::before {
+      background-color: #eff3f6; }
+    .timeline .timeline-item.is-dark::before {
+      background-color: #2f3a4b; }
+    .timeline .timeline-item.is-primary::before {
+      background-color: #2f3a4b; }
+    .timeline .timeline-item.is-link::before {
+      background-color: #20659d; }
+    .timeline .timeline-item.is-info::before {
+      background-color: #6d97ca; }
+    .timeline .timeline-item.is-success::before {
+      background-color: #008a37; }
+    .timeline .timeline-item.is-warning::before {
+      background-color: #eca136; }
+    .timeline .timeline-item.is-danger::before {
+      background-color: #ea6148; }
+  .timeline.is-centered .timeline-header {
+    display: flex;
+    width: 100%;
+    align-self: center; }
+  .timeline.is-centered .timeline-item {
+    width: 50%;
+    align-self: flex-end;
+    flex-direction: row; }
+    .timeline.is-centered .timeline-item:nth-of-type(2n) {
+      align-self: flex-start;
+      flex-direction: row-reverse;
+      margin-left: 0;
+      margin-right: 2em; }
+      .timeline.is-centered .timeline-item:nth-of-type(2n)::before {
+        right: -0.5px;
+        left: auto; }
+      .timeline.is-centered .timeline-item:nth-of-type(2n) .timeline-marker {
+        transform: translateX(50%); }
+      .timeline.is-centered .timeline-item:nth-of-type(2n) .timeline-content {
+        padding: 1em 2em 0 0;
+        text-align: right;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        flex-basis: 100%; }
+    .timeline.is-centered .timeline-item:nth-of-type(2n+1)::before {
+      content: "";
+      background-color: #dbdbdb;
+      display: block;
+      width: 1px;
+      height: 100%;
+      position: absolute;
+      top: 0; }
+    .timeline.is-centered .timeline-item.is-white::before {
+      background-color: white; }
+    .timeline.is-centered .timeline-item.is-black::before {
+      background-color: #0a0a0a; }
+    .timeline.is-centered .timeline-item.is-light::before {
+      background-color: #eff3f6; }
+    .timeline.is-centered .timeline-item.is-dark::before {
+      background-color: #2f3a4b; }
+    .timeline.is-centered .timeline-item.is-primary::before {
+      background-color: #2f3a4b; }
+    .timeline.is-centered .timeline-item.is-link::before {
+      background-color: #20659d; }
+    .timeline.is-centered .timeline-item.is-info::before {
+      background-color: #6d97ca; }
+    .timeline.is-centered .timeline-item.is-success::before {
+      background-color: #008a37; }
+    .timeline.is-centered .timeline-item.is-warning::before {
+      background-color: #eca136; }
+    .timeline.is-centered .timeline-item.is-danger::before {
+      background-color: #ea6148; }
+  .timeline.is-rtl {
+    justify-content: flex-end;
+    align-items: flex-end; }
+    .timeline.is-rtl .timeline-item {
+      justify-content: flex-end;
+      flex-direction: row;
+      border-left: none;
+      margin-left: 0;
+      margin-right: 2em; }
+      .timeline.is-rtl .timeline-item::before {
+        right: 0;
+        left: auto; }
+      .timeline.is-rtl .timeline-item .timeline-marker {
+        transform: translateX(50%); }
+        .timeline.is-rtl .timeline-item .timeline-marker.is-image.is-16x16 {
+          transform: translateX(50%); }
+        .timeline.is-rtl .timeline-item .timeline-marker.is-image.is-24x24 {
+          transform: translateX(50%); }
+        .timeline.is-rtl .timeline-item .timeline-marker.is-image.is-32x32 {
+          transform: translateX(50%); }
+        .timeline.is-rtl .timeline-item .timeline-marker.is-image.is-48x48 {
+          transform: translateX(50%); }
+        .timeline.is-rtl .timeline-item .timeline-marker.is-image.is-64x64 {
+          transform: translateX(50%); }
+        .timeline.is-rtl .timeline-item .timeline-marker.is-image.is-96x96 {
+          transform: translateX(50%); }
+        .timeline.is-rtl .timeline-item .timeline-marker.is-image.is-128x128 {
+          transform: translateX(50%); }
+      .timeline.is-rtl .timeline-item .timeline-content {
+        padding: 1em 2em 0 0;
+        text-align: right; }
+  .timeline.no-headers .timeline-item.is-first::before {
+    height: calc(100% - 1.2rem);
+    top: 1.2rem; }
+  .timeline.no-headers .timeline-item.is-last::before {
+    height: 1.2rem; }
+
 /* based on https://cdn.skauting.cz/css/style.css */
 @font-face {
   font-family: 'themix';
@@ -7023,6 +7410,9 @@ a:hover {
   text-decoration: none; }
 
 a.button {
+  text-decoration: none; }
+
+a .title {
   text-decoration: none; }
 
 /* specific navbar logo height */
